# open-ran-interface

./: CMakeLists.txt  README.md  conanfile.txt  config.cf  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
src/controller/: controller.cpp  controller.hpp
src/db/: redisconnector.cpp  redisconnector.hpp
src/interfaces/: consolewriter.cpp  consolewriter.hpp  ireader.hpp  iwriter.hpp  webwriter.cpp  webwriter.hpp
src/queue/: concurrentqueue.cpp  concurrentqueue.hpp
